@@ -1585,8 +1585,18 @@ bool CSQLHelper::OpenDatabase()
 	}
 	if (!GetPreferencesVar("ZWaveNetworkKey", sValue))
 	{
-		UpdatePreferencesVar("ZWaveNetworkKey", "0x01, 0x02, 0x03, 0x04, 0x05, 0x06, 0x07, 0x08, 0x09, 0x0A, 0x0B, 0x0C, 0x0D, 0x0E, 0x0F, 0x10");
+		sValue = "0x01, 0x02, 0x03, 0x04, 0x05, 0x06, 0x07, 0x08, 0x09, 0x0A, 0x0B, 0x0C, 0x0D, 0x0E, 0x0F, 0x10";
+		UpdatePreferencesVar("ZWaveNetworkKey", sValue);
 	}
+	//Double check network_key
+	std::vector<std::string> splitresults;
+	StringSplit(sValue, ",", splitresults);
+	if (splitresults.size() != 16)
+	{
+		sValue = "0x01, 0x02, 0x03, 0x04, 0x05, 0x06, 0x07, 0x08, 0x09, 0x0A, 0x0B, 0x0C, 0x0D, 0x0E, 0x0F, 0x10";
+		UpdatePreferencesVar("ZWaveNetworkKey", sValue);
+	}
+
 	if (!GetPreferencesVar("ZWaveEnableNightlyNetworkHeal", nValue))
 	{
 		UpdatePreferencesVar("ZWaveEnableNightlyNetworkHeal", 0);
