@@ -81,6 +81,7 @@ Version 2.0.xxxx (xxxx 2015)
 - Implemented: MySensors, V_RAIN
 - Implemented: MySensors, V_WIND/V_GUST/V_DIRECTION
 - Fixed: Blockly, possible saving of 'ghost' events
+- Implemented: Sanity check for OpenZWave NetworkKey Length
 
 Version 2.0.2284 (February 22th 2015)
 - Fixed: Firefox, RGBW/Setpoint popup
